force-app/main/default/objects/sfcma__Invoice__c/sfcma__Invoice__c.object-meta.xml
<CustomObject>
    <description>Contains billing and payment information for a subscription for a specific time period. For example, the total amount owed by the customer.</description>
    <label>Checkout Invoice</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Checkout Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>