force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__ChargeVAT__c.field-meta.xml
<CustomField>
    <fullName>sfcma__ChargeVAT__c</fullName>
    <description>Flag to indicate that the subscription invoices should include VAT</description>
    <formula>sfcma__Subscription__r.sfcma__IsChargeVAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge VAT?</label>
    <type>Checkbox</type>
</CustomField>