force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__Closed__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the invoice is still trying to collect payment</description>
    <label>Closed?</label>
    <type>Checkbox</type>
</CustomField>