force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__DiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>sfcma__DiscountPercentage__c</fullName>
    <label>Discount Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>