force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__EndDate__c.field-meta.xml
<CustomField>
    <fullName>sfcma__EndDate__c</fullName>
    <description>End of the usage period during which invoice items were added to this invoice</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>