force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__USSalesTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>sfcma__USSalesTaxAmount__c</fullName>
    <description>Populated with Tax Amount when Subscription Shipping Country is US</description>
    <label>US Sales Tax Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>